--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -5,9 +5,7 @@
   justify-content: center;
   background-color: #002612;
   background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
-  /* height: 400px; */
-  /* made header full bleed */
-  height: 100vh;
+  height: 400px;
   width: 100%;
   margin-top: 120px;
 }
