--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -21,3 +21,31 @@ nav {
 .bold-700 {
   font-weight: 700;
 }
+
+.newButton {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+@keyframes bounce { 
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-5px); }
+}
+
+.newButton img {
+  position: relative;
+  bottom: 15px;
+  animation: bounce 0.2s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+}
+
+
+.newButton img:hover {
+  box-shadow:
+    0 0 30px 15px #fff,  /* inner white */
+    0 0 50px 30px #f0f, /* middle magenta */
+    0 0 70px 45px #0ff; /* outer cyan */
+}
